<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_home_page"
    tools:context="com.devacademy.running.HomePageActivity"
    android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/kilometer_count"
            android:id="@+id/kilometerCount"
            android:textAlignment="center"
            android:textSize="@dimen/header_text_size"
            android:textColor="@color/highlightColor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="@string/kilometers"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/content_margin">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tot_runs_count"
                    android:drawableTop="@mipmap/ic_run_black_24dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tot_runs"
                    android:textAlignment="center"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_pace_count"
                    android:drawableTop="@mipmap/ic_camera_timer_black_24dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_pace"
                    android:textAlignment="center"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_nike_count"
                    android:drawableTop="@mipmap/ic_plus_circle_outline_black_24dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_nike"
                    android:textAlignment="center"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/content_margin"
                android:background="@drawable/rectangular">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/table_head_height"
                    android:background="@color/tableHead">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:text="@string/date"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_chevron_right_grey600_18dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/monthNavigate" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/table_padding"
                    android:paddingBottom="@dimen/table_padding"
                    android:paddingLeft="@dimen/table_padding"
                    android:paddingRight="@dimen/table_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"
                        android:textColor="@color/highlightColor"
                        android:text="@string/number"
                        android:id="@+id/tableIndex" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_human_child_grey600_18dp"
                        android:id="@+id/tableIcon"
                        android:paddingLeft="@dimen/table_padding"
                        android:paddingRight="@dimen/table_padding"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tableIndex"
                        android:layout_toEndOf="@+id/tableIndex" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"
                        android:textColor="@color/highlightColor"
                        android:text="@string/user"
                        android:id="@+id/tableUsername"
                        android:layout_alignTop="@+id/tableIndex"
                        android:layout_toRightOf="@+id/tableIcon"
                        android:layout_toEndOf="@+id/tableIcon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"
                        android:textColor="@color/highlightColor"
                        android:text="@string/km"
                        android:layout_alignTop="@+id/tableIndex"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/tableKm" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/footer"
                    android:textAlignment="center"
                    android:padding="@dimen/table_padding"
                    android:background="@drawable/rectangular"/>

            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:id="@+id/begin_run"
                android:background="@color/highlightColor"
                android:textColor="@color/buttonText"
                android:drawableLeft="@mipmap/ic_run_white_24dp"
                android:text="@string/begin_run"/>

        </LinearLayout>

</LinearLayout>
